as per code review comments

--- a/udprofile/views/pizza.html
+++ b/udprofile/views/pizza.html
@@ -65,4 +65,4 @@
   } else{
     window.addEventListener('load', addStyleSheet);
   }
-</script><script type=text/javascript src=js/main.js></script></html>
+</script><script type=text/javascript src=js/main.min.js></script></html>
